--- a/content/publication/conference-paper/cite.bib
+++ b/content/publication/conference-paper/cite.bib
@@ -1,8 +1,9 @@
-@inproceedings{example1,
-  title={An example conference paper},
-  author={Bighetti, Nelson and Ford, Robert},
-  booktitle={Source Themes Conference},
-  pages={1--6},
-  year={2013},
-  organization={IEEE}
+@misc{zhong2023proflprivacypreservingfederatedlearning,
+      title={PROFL: A Privacy-Preserving Federated Learning Method with Stringent Defense Against Poisoning Attacks}, 
+      author={Yisheng Zhong and Li-Ping Wang},
+      year={2023},
+      eprint={2312.01045},
+      archivePrefix={arXiv},
+      primaryClass={cs.CR},
+      url={https://arxiv.org/abs/2312.01045}, 
 }
